package msgs;
import "camera.proto";

message SwitchCamera {
    required Camera.CameraType camera_type = 2;
}
